--- a/src/lithium/doc/lithium20.tex
+++ b/src/lithium/doc/lithium20.tex
@@ -582,6 +582,7 @@ then $\psi$ is the quadratic coupling factor, since
 
 We deduce from each choice of $\varphi_x$
 \begin{equation}
+\label{eq:Qx}
 \left\lbrace
 \begin{array}{rcl}
 	\eta (1-\hat\alpha_\infty) \beta_x^\infty Q_x & = & \eta \hat\alpha_\infty h_\infty \Upsilon_x - \mu_x\left(\beta_x^\infty - \Theta \right)\\
@@ -667,7 +668,7 @@ Then
 	\item We choose a linear level $\cos^2 \varphi_6$
 	
 	\end{itemize}	
-	WARNING: since either of those values will change $\hat\alpha\infty$, this means that both $Q_x$ will be affected!
+	WARNING: since either of those values will change $\hat\alpha_\infty$, this means that both $Q_x$ will be affected!
 
 \end{itemize}
 
@@ -736,7 +737,7 @@ $$
 	\hat\alpha_\infty = \cos^2\Omega\cos^2\psi + \sin^2\psi
 $$
 
-\item We compute
+\item We compute from \eqref{eq:Qx}
 $$
 	Q_x = ... %\dfrac{\rho_\infty h_0 \Upsilon_7}{(1-\hat\alpha_\infty)\beta_x^\infty} \left[ \right]
 $$
