--- a/src/lithium/doc/lithium20.tex
+++ b/src/lithium/doc/lithium20.tex
@@ -739,7 +739,7 @@ $$
 
 \item We compute from \eqref{eq:Qx}
 $$
-	Q_x = ... %\dfrac{\rho_\infty h_0 \Upsilon_7}{(1-\hat\alpha_\infty)\beta_x^\infty} \left[ \right]
+	Q_x =  \dfrac{h_\infty \Upsilon_x \left( {\cos^2\Omega \cos^2\psi + \sin^2\psi}  -  {\cos^2\Omega \cos^2 \varphi_x} \right)}{(1-\hat\alpha_\infty)\beta_x^\infty}
 $$
 
 \end{itemize}
