--- a/src/lithium/doc/lithium20.tex
+++ b/src/lithium/doc/lithium20.tex
@@ -84,7 +84,7 @@ and
 \begin{array}{rclcl}
 	\LiOut{6} & = & \dfrac{1}{1+\beta_s \left[1+10^{-3}\deltaLiOut\right] } \LiAllOut & = & \epsilon_6 \LiAllOut  = \epsilon \LiAllOut \\
 	\\
-	\LiOut{7} & = & \dfrac{\beta_s \left[1+10^{-3}\deltaLi\right]}{1+\beta_s \left[1+10^{-3}\deltaLiOut\right] } \LiAllOut & = & \epsilon_7 \LiAllOut,\;\epsilon_7 = 1-\epsilon \\
+	\LiOut{7} & = & \dfrac{\beta_s \left[1+10^{-3}\deltaLiOut\right]}{1+\beta_s \left[1+10^{-3}\deltaLiOut\right] } \LiAllOut & = & \epsilon_7 \LiAllOut,\;\epsilon_7 = 1-\epsilon \\
 \end{array}
 \right.
 \end{equation}
