--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -2,15 +2,15 @@
 \usepackage{graphicx}
 \usepackage{amssymb,amsfonts,amsmath,amsthm}
 \usepackage{chemarr}
-\usepackage{chemfig}
 \usepackage{bm}
 \usepackage{pslatex}
 \usepackage{xfrac}
-%\usepackage[dvipsnames]{xcolor}
+\usepackage[dvipsnames]{xcolor}
 \usepackage{bookman}
 \usepackage{dsfont}
 \usepackage{mathptmx}
 \usepackage{hyperref}
+\usepackage{rotating}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%
@@ -28,15 +28,15 @@
 \newcommand{\spEout}{\mychem{E}}
 \newcommand{\Eout}{\myconc{\spEout}}
 
-\newcommand{\spLiEin}[1]{\left\lbrace\spLi{#1}\spEout\right\rbrace_{\mathrm{in}}}
-\newcommand{\LiEin}[1]{\myconc{\spLiEin{#1}}}
+%\newcommand{\spLiEin}[1]{\left\lbrace\spLi{#1}\spEout\right\rbrace_{\mathrm{in}}}
+%\newcommand{\LiEin}[1]{\myconc{\spLiEin{#1}}}
 
 \newcommand{\spLiE}[1]{\left\lbrace\spLi{#1}\spEout\right\rbrace}
 \newcommand{\LiE}[1]{\myconc{\spLiE{#1}}}
 
 
-\newcommand{\spLiEout}[1]{\left\lbrace\spLi{#1}\spEout\right\rbrace_{\mathrm{out}}}
-\newcommand{\LiEout}[1]{\myconc{\spLiEout{#1}}}
+%\newcommand{\spLiEout}[1]{\left\lbrace\spLi{#1}\spEout\right\rbrace_{\mathrm{out}}}
+%\newcommand{\LiEout}[1]{\myconc{\spLiEout{#1}}}
 
 \newcommand{\spLiIn}[1]{{\spLi{#1}}_{\mathrm{in}}}
 \newcommand{\LiIn}[1]{\myconc{\spLiIn{#1}}}
@@ -74,6 +74,20 @@
 \maketitle
 
 \section{Model}
+
+\begin{equation}
+\left\lbrace
+\begin{array}{cccl}
+\spLiOut{x} + \spEout & \xrightleftharpoons[~~k^d_x~~]{~~k^a_x~~} & \spLiE{x} & (\text{pre-equilibrium})\\
+\\
+\spLiE{x} + \spproton & \xrightleftharpoons[~~k^q_x~~]{~~k^p_x~~} & \spEHin + \spLiIn{x} & (\text{Lithium intake and reverse path})\\
+\\
+\spEHin               & \xrightarrow{~~k_h~~} & \spEout + \spproton_{\mathrm{out}} & (\text{Enzyme recycling})\\
+\\
+\spLiOut{x}           & \xrightleftharpoons[~~k_x~~]{~~k_x e^{-\frac{FV}{RT}}~~} & \spLiIn{x} & (\text{Passive Leak})\\
+\end{array}
+\right.
+\end{equation}
 
 
 \end{document}
