--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -358,7 +358,7 @@ be a few times the outer concentration. Indeed, the passive lithium intake is de
 	\LiAll^\ko = \LiAllOut \Theta \left[ \epsilon_6 \left(1-e^{-k_6t}\right)  + \epsilon_7 \left(1-e^{-k_7t}\right)\right]
 \end{equation}
 
-\subsection{Parameters Estimation from Passive-Only Experiments}
+\subsubsection{Parameters Estimation from Passive-Only Experiments}
 The catalytic pathway can be simply discarded through two conditions:
 \begin{itemize}
 	\item we block $\NHE{1}$ by keeping the acidic medium,
